[project]
authors = [{ name = "Allen Chou", email = "f1470891079@gmail.com" }]
dependencies = [
  "dictpress (>=0.3.0)",
  "openai-agents>=0.1.0,<1",
  "openai>=1,<2",
  "pydantic (>=2)",
  "str-or-none",
]
description = "User Satisfaction Survey Agent"
license = { text = "MIT" }
name = "user-satisfaction-survey-agent"
readme = "README.md"
requires-python = ">=3.11,<4"
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/allen2c/user-satisfaction-survey-agent"
"PyPI" = "https://pypi.org/project/user-satisfaction-survey-agent/"
Repository = "https://github.com/allen2c/user-satisfaction-survey-agent"

[tool.poetry]
packages = [{ include = "user_satisfaction_survey_agent" }]

[tool.poetry.extras]
all = []

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "*" }
codepress = "*"
isort = "*"
poetry-plugin-export = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-xdist = "*"
rich = "*"
rich-color-support = "*"
setuptools = "*"
twine = "*"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E704", "W503"]
max-line-length = 88

[tool.pytest.ini_options]
env = ["ENVIRONMENT=test", "PYTEST_IS_RUNNING=true"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
